# Secure-Software-Development-for-Robotics

./: .gitignore  CLI.py  README.md  __init__.py  main.py  remote.py  robot_security.py  security_node.py  setup.py
controller/: __init__.py  actions.py  robot_controller.py  security.py  security_manager.py
gui/: __init__.py  gui_app.py
src/irobot_create_nodes/src/motion_control/: drive_goal_behaviors.cpp
src/ssdr/: actions.py  main.py  main_security.py  package.xml  remote.py  robot_security.py  security_node.py  setup.cfg  setup.py
src/ssdr/controller/: __init__.py  actions.py  gui_app.py  robot_controller.py  sanitizer_manager.py  security_manager.py
src/ssdr/gui/: gui_app.py
src/ssdr/ssdr/: main.py  main_security.py  robot_security.py  security_node.py
src/ssdr/ssdr/controller/: __init__.py  actions.py  robot_controller.py  security_manager.py
src/ssdr/ssdr/gui/: gui_app.py
src/ssdr/utils/: config.py
src/ssdr_interfaces/: CMakeLists.txt  package.xml
src/ssdr_interfaces/action/: EncryptedAction.action
src/ssdr_interfaces/srv/: KeyExchange.srv
ssdr/: pyvenv.cfg
utils/: __init__.py  config.py  logging.py  security.py  setup.py
