<package format="2">
  <name>ssdr</name>
  <version>0.0.1</version>
  <description>Secure Software Development for Robotics</description>
  <maintainer email="markusjuhllarsen@gmail.com">Markus Juhl Larsen</maintainer>
  <license>Apache-2.0</license>


   <!-- Build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cryptography</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Required so this package can be used as a service definition package -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>