<package format="2">
  <name>ssdr</name>
  <version>0.0.1</version>
  <description>Secure Software Development for Robotics</description>
  <maintainer email="markusjuhllarsen@gmail.com">Markus Juhl Larsen</maintainer>
  <license>Apache-2.0</license>

   <!-- Build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cryptography</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>